# CityPulse

./: .gitignore  devserver.sh
backend/: .env.example  app.py  config.py  pyproject.toml
backend/api/models/: __init__.py  department.py  issue.py  issue_update.py  user.py  verification.py
backend/api/routes/: admin.py  auth.py  issues.py  users.py
backend/api/utils/: s3.py
backend/migrations/versions/: 524956c09e98_initial_migration.py  7c49e80d7309_update_issue_model_with_location_fields.py  95f4948a039d_auto_migration.py  c84bad9eaef3_auto_migration.py  ee25927ac917_auto_migration.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/assets/: base.css
frontend/src/components/: App-Navbar.vue  Audio-Capture-Modal.vue  Auth-Login.vue  Auth-Register.vue  ImageLightbox.vue  Issue-Form.vue  Location-Selector.vue  Photo-Capture-Modal.vue  Video-Capture-Modal.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Admin-Dashboard.vue  Admin-Issue-Manage.vue  Issue-Create.vue  Issue-Detail.vue  Public-Landing.vue  User-Dashboard.vue  User-Issues.vue  User-Profile.vue
