[project]
name = "citypulse-backend"
version = "0.1.0"
description = "A Crowdsourced Civic Problem Reporting Platform"
readme = "./README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.0.0",
    "boto3>=1.40.34",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "geoalchemy2>=0.18.0",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
